# airco-tracking

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS.nl.md  AGENTS.zh.md  CLAUDE.md  CLAUDE.nl.md  CLAUDE.zh.md  Dockerfile  README.en.md  README.md  README.nl.md  com.airco-tracker-nl.plist.example  com.airco-tracker.plist.example  install-launch-agent.sh  pyproject.toml  uninstall-launch-agent.sh
airco_tracker/: __init__.py  alert_events.py  alert_pipeline.py  aliexpress.py  awin.py  azure_auth.py  cli.py  config.py  deliveries.py  delivery_coverage.py  delivery_reports.py  email_rate_limit.py  fetch.py  i18n.py  i18n_local.json  i18n_table.py  inventory.py  inventory_store.py  mailer.py  models.py  outbox.py  partner_feed_store.py  recipient_projection.py  retention.py  scan_lock.py  service_bus.py  state.py  state_store.py  subscribers.py  unsubscribe.py  url_security.py
docs/: ACS_CUSTOM_EMAIL_DOMAIN.md  ACS_CUSTOM_EMAIL_DOMAIN.zh.md  ALERT_PIPELINE.md  ALERT_PIPELINE.zh.md  ALIEXPRESS_INTEGRATION.md  ALIEXPRESS_INTEGRATION.zh.md  EMAIL_DELIVERY.md  EMAIL_DELIVERY.zh.md  FRANCE_403_BACKLOG.md  HANDOFF.md  HANDOFF.nl.md  HANDOFF.zh.md  HARDENING.md  HARDENING.zh.md  RETAILER_403_BACKLOG.md  RETAILER_403_BACKLOG.nl.md  RETAILER_403_BACKLOG.zh.md
infra/: foundation.bicep  github-deployer-role.bicep  github-oidc.bicep  job.bicep
scripts/: bootstrap-github-oidc.sh  configure-acs-custom-domain.sh  configure-notification-email.sh  deploy-application.sh  deploy-azure.sh  migrate-runtime-identities.sh  render_job_execution_template.py  seed-i18n.py  (+1 more)
(+121 files in other folders)
